add fork/download links, related links

--- a/index.html
+++ b/index.html
@@ -39,8 +39,15 @@
                 </div>
             </header>
 
+            <a href="https://github.com/johnpolacek/imagefill.js/"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
+
             <div class="simple-demo">
                 <img src="http://octodex.github.com/images/daftpunktocat-thomas.gif" alt="Octocat Github Mascot">
+            </div>
+
+            <div class="block">
+                <h3>Download</h3>
+                <p>Source files <a href="https://github.com/johnpolacek/imagefill.js/" target="_blank">on github</a> or <a href="https://github.com/johnpolacek/imagefill.js/zipball/master/" target="_blank">download the zip</a>.</p>
             </div>
             
             <div class="block">
@@ -94,6 +101,15 @@
                 <h3>Requires:</h3>
                 <ul>
                     <li><a href="https://github.com/desandro/imagesloaded">imagesLoaded</a></li>
+                </ul>
+            </div> 
+
+            <div class="block">
+                <h3>Other useful tools:</h3>
+                <ul>
+                    <li><a href="https://github.com/tsvensen/equalize.js/">equalize.js</a> - The jQuery plugin for equalizing the height or width of your elements</li>
+                    <li><a href="http://dfcb.github.io/extra-strength-responsive-grids/">Extra Strength Responsive Grids</a> - The Fluid CSS Grid System for Responsive Web Design. Take total control of your layouts.</li>
+                    <li><a href="http://johnpolacek.github.io/stacktable.js/">stacktable.js</a> - jQuery plugin for stacking tables on small screens.</li>
                 </ul>
             </div> 
         </div>
