refactor to support different size containers, add packery example

--- a/responsive.html
+++ b/responsive.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>imagefill.js</title>
+        <title>imagefill.js | Responsive Example</title>
         <meta name="description" content="imagefill.js - The jQuery plugin for making an image fill its container (and be centered)">
         <meta name="viewport" content="width=device-width">
 
