--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>imagefill.js</title>
+        <title>imagefill.js | Project Page</title>
         <meta name="description" content="imagefill.js - The jQuery plugin for making an image fill its container (and be centered)">
         <meta name="viewport" content="width=device-width">
 
@@ -71,7 +71,20 @@
             <div class="block">
                 <h3>Grid Example</h3>
                 <p>Given a grid like this:</p>
-                <pre></pre>
+                <pre>&lt;div class="grid-whole"&gt;
+    &lt;div class="grid-quarter"&gt;
+        &lt;img src="myawesomeimage.jpg"&gt;
+    &lt;/div&gt;
+    &lt;div class="grid-quarter"&gt;
+        &lt;img src="myawesomeimage.jpg"&gt;
+    &lt;/div&gt;
+    &lt;div class="grid-quarter"&gt;
+        &lt;img src="myawesomeimage.jpg"&gt;
+    &lt;/div&gt;
+    &lt;div class="grid-quarter"&gt;
+        &lt;img src="myawesomeimage.jpg"&gt;
+    &lt;/div&gt;
+&lt;/div&gt;</pre>
                 <p>Do this:</p>
                 <pre>$('.grid-quarter').imageFill(); 
 // image stretches to fill container</pre>
@@ -92,6 +105,14 @@
                     </div>
                 </div>
                 <p>Check out <a href="responsive.html" target="_blank">this simple responsive grid example</a>.</p>
+            </div>
+
+            <div class="block">
+                <h3>Different Sizes Example</h3>
+                <p>Given images that vary in sizes, for example using jQuery Masonry or Packery, do this:</p>
+                <pre>$('.item').imageFill(); 
+// image stretches to fill container</pre>
+                <p>Check out <a href="packery.html" target="_blank">this simple packery example</a> which is also a nice use case for the <code>{runOnce:true}</code> option.</p>
             </div>
 
             <div class="block">
@@ -116,6 +137,7 @@
             <div class="block">
                 <h3>If you like imagefill.js, you might also like:</h3>
                 <ul>
+                    <li><a href="http://packery.metafizzy.co/">Packery</a> - The bin-packing layout library that is from the same <a href="https://github.com/desandro">mad genius</a> who created jQuery <a href="http://masonry.desandro.com/">Masonry</a> and <a href="http://isotope.metafizzy.co/">isotope</a>.</li>
                     <li><a href="https://github.com/tsvensen/equalize.js/">equalize.js</a> - The jQuery plugin for equalizing the height or width of your elements</li>
                     <li><a href="http://dfcb.github.io/extra-strength-responsive-grids/">Extra Strength Responsive Grids</a> - The Fluid CSS Grid System for Responsive Web Design. Take total control of your layouts.</li>
                     <li><a href="http://johnpolacek.github.io/stacktable.js/">stacktable.js</a> - jQuery plugin for stacking tables on small screens.</li>
@@ -130,8 +152,9 @@
         <script src="js/jquery-imagefill.js"></script>
         <script>
 
+            // SIMPLE DEMO
             $('.simple-demo')
-                // call image fill throttled to 60 fps (default is only 6 fps, works for most situations)
+                // call image fill throttled to 30 fps (default is only 10 fps, works for most situations)
                 .imagefill({throttle:1000/60})
                 // add looped animation queue
                 .queue(function(next) {
@@ -140,6 +163,7 @@
                     next();
                 });
 
+            // GRID DEMO
             $('.grid-quarter').imagefill();
             $('.grid-demo').queue(function(next) {
                 $(this).animate({width:320},4000).animate({width:640},4000);
@@ -147,6 +171,7 @@
                 next();
             });
 
+            // Prevent FOUC
             $('.no-fouc').removeClass('no-fouc');
         </script>
 
