--- a/packery.html
+++ b/packery.html
@@ -78,6 +78,9 @@
                 <img src="http://octodex.github.com/images/daftpunktocat-thomas.gif" alt="Octocat Github Mascot">
             </div>
         </div>
+        <footer>
+            <p><small><em><a href="index.html">Back to imagefill.js</a></em></small></p>
+        </footer>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
