--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>imagefill.js | Project Page</title>
-        <meta name="description" content="imagefill.js - The jQuery plugin for making an image fill its container (and be centered)">
+        <meta name="description" content="imagefill.js - The jQuery plugin for making images fill their containers (and be centered)">
         <meta name="viewport" content="width=device-width">
 
         <link href='http://fonts.googleapis.com/css?family=Patua+One' rel='stylesheet' type='text/css'>
@@ -37,7 +37,7 @@
                     <h1>imagefill.js</h1>
                 </div>
                 <div class="block">
-                    <h2>The jQuery plugin for making an image fill its container (and be centered)</h2>
+                    <h2>The jQuery plugin for making images fill their containers (and be centered)</h2>
                     <p><small><em>a potentially useful tool for Responsive Web Design</em></small></p>
                 </div>
                 <div class="block">
