--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <div class="block">
                 <h3>Options</h3>
                 <p><strong>runOnce</strong><br>
-                    Imagefill continuously checks to see if the size of the image container changes, then it adjusts the size of the image inside. To only run once, set to false.
+                    Imagefill continuously checks to see if the size of the image container changes, then it adjusts the size of the image inside. To only call imagefill once, set to true.
                 </p> 
                 <pre>$('.img-container').imagefill({runOnce:true});</pre>
                 <p><strong>throttle</strong><br>
